# ubiquitous-octo-pancake

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tmp_show.ps1
.github/workflows/: ci.yml
aws/: genai-servicenow-mcp-td-qa01.json
config/: tool_packages.yaml
scripts/: setup.ps1
src/: config.py  dependencies.py  main.py  server.py
src/auth/: __init__.py  auth_manager.py
src/mcp_core/: jsonrpc.py  operations.py  protocol.py  server.py
src/middleware/: __init__.py  errors.py  logging.py
src/routes/: __init__.py  catalog.py
src/servicenow_api/: client.py
src/tools/: catalogue_builder.py  change_coordinator.py  cmdb_reader.py  knowledge_author.py  service_desk.py  systems_administrator.py
src/utils/: error_handler.py  http_client.py  log_analyzer.py  logging.py  response_formatter.py  snow_client.py
tests/: .env.test  __init__.py  conftest.py  direct_test.py  test_auth_basic.py  test_auth_manager.py  test_catalogue_builder_comprehensive.py  test_change_coordinator.py  test_cmdb_reader.py  test_e2e.py  test_integration.py  test_knowledge_author.py  test_protocol.py  test_rpc_endpoint.py  test_service_desk.py  test_streaming.py  test_systems_administrator.py
tests/test_utils/: __init__.py  config.py  debug_client.py  mock_data.py  mock_data_extra.py  snow_client.py
